Arreglado un problema con el whitespace en la cabecera que hacía que hubiera separación entre los elementos del menú.

--- a/view/css/goteo.css
+++ b/view/css/goteo.css
@@ -60,6 +60,7 @@ div#menu > ul {
     max-width: 940px;    
     position: relative;
     margin: 0 auto;    
+    font-size: 0; /* aka *Ignore whitespace between li's* */
 }
 
 div#menu > ul > li {
