--- a/view/css/goteo.css
+++ b/view/css/goteo.css
@@ -686,7 +686,7 @@ div.superform div.fields ol li div.tooltip blockquote {
     color: #7f8183;
     border-radius: 7px;
     box-shadow: 2px 3px 0 rgba(0,0,0,.2);
-    font-size: 12px;
+    font-size: 13px;
     position: relative;
 }
 
@@ -874,6 +874,8 @@ body.project-form div#main .status #information-status .meter .left {
     bottom: 0;
 }
 
+/* Form navigator (*steps*) */
+
 body.project-form div#main #project-steps {
     padding: 30px 0;
     text-align: center;
@@ -884,35 +886,45 @@ body.project-form div#main #project-steps h3 {
 }
 
 body.project-form div#main #project-steps ol {
-    margin: 0;
+    margin: -10px 0 0;
     padding: 0;
     list-style: none;  
     border-bottom: 2px solid #b2b2b2;
     display: inline-block;
-    height: 2.5em;
+    height: 3.5em;
 }
 
 body.project-form div#main #project-steps li {
     display: inline-block;
-    padding: 0 1em;
-    height: 100%;
+    padding: 0 1em 10px;
+    height: 100%;    
+    background: url('form/step-on.png') no-repeat bottom center;    
 }
 
-body.project-form div#main #project-steps li a {
-    font-size: 12px;
-    color: #b2b2b2;
-    text-decoration: none;
+body.project-form div#main #project-steps li input {
+    font-size: 12px;    
     font-weight: normal;
-    display: inline-block;
     height: 100%;
-    padding-bottom: 10px;
-    background: url('form/step-off.png') no-repeat bottom center;
+    margin: 0;    
+    padding: 0;
+    border: none;
+    background: none;
+    color: #20b2b1;
+    
 }
 
-body.project-form div#main #project-steps li.current a {
-    background-image: url('form/step-on.png');
-    cursor: default;
+body.project-form div#main #project-steps li.current {
 }
+
+body.project-form div#main #project-steps li.offtopic {
+    background-image: url('form/step-off.png');    
+}
+
+body.project-form div#main #project-steps li.offtopic input {
+    color: #b2b2b2;
+}
+
+
 
 body.project-form div.superform {
     border: solid #0a0a0a;
