--- a/view/css/goteo.css
+++ b/view/css/goteo.css
@@ -3,6 +3,8 @@
  * Common elements & layout
 */
 
+@import url('superform.css');
+
 * {
     font-family: Helvetica, Arial, Geneva, sans-serif;
 }
@@ -27,6 +29,10 @@ body {
     margin: 0 auto;
     top: 0;
     position: relative;
+}
+
+h1 {
+    display: none;
 }
 
 input[type="text"],
@@ -500,293 +506,6 @@ body.user-profile div#sub-header h2 em {
     font-style: normal;
 }
 
-/**
- * Superforms
- */
-div.superform input[type="text"],
-div.superform input[type="password"],
-div.superform textarea,
-div.superform fieldset {
-    min-width: 95%;
-    max-width: 95%;
-}
-
-div.superform fieldset {
-    border: 1px solid #99a2a5;    
-}
-
-div.superform fieldset legend {
-    color: #6d7375;
-}
-
-div.superform h3 {
-    font-size: 30px;    
-}
-
-div.superform div.guide,
-div.superform div.fields {    
-    overflow: visible;
-}
-
-div.superform div.guide {
-    color: #7f8183;    
-}
-
-body.project-form.js div#main div.superform div.guide {
-    background: url('form/wizard.png') no-repeat right top;
-    padding-right: 250px;    
-    border-right: 1px dashed #b7c2c5;    
-}
-
-div.superform div.fields {
-    border-right: 1px dashed #b7c2c5
-}
-
-div.superform div.guide h4,
-div.superform div.guide blockquote {
-    display: table-cell;
-    background-color: #ddf0f1;
-    padding: 20px;    
-    vertical-align: top;
-    border: dashed #b7c2c5;
-    border-width: 1px 0 0;
-}
-
-div.superform div.guide h4 {
-    font-size: 30px;        
-}
-
-div.superform div.guide blockquote {
-    font-size: 12px;
-    border-right-width: 1px;
-    width: 100%;
-}
-
-div.superform div.guide blockquote p {
-    margin: 0;
-}
-
-div.superform div.fields ol {
-    padding: 0;    
-    margin: 0;
-    list-style-position: inside;
-}
-
-div.superform div.fields ol ol {
-    padding-left: 2em;
-    margin-top: 2em;
-}
-
-div.superform div.fields ol li {    
-    border-top: 1px dashed #B7C2C5;
-    padding: 2em 0;
-    position: relative;    
-}
-
-body.js div.superform div.fields ol li {
-    margin-right: 250px;
-    border-right: 1px dashed #b7c2c5;
-}
-
-body.js div.superform div.fields ol li li {
-    margin-right: 0;
-    border-right: none;
-}
-
-div.superform div.fields ol li div.field {
-    display: inline;    
-}
-
-div.superform div.fields ol li h4 {    
-    display: inline;
-}
-
-div.superform div.fields ol li div.elements {
-    margin-top: 1em;
-}
-
-div.superform div.buttons {
-    border: solid #0a0a0a; 
-    border-width: 3px 0 0;
-    padding: 20px;
-    text-align: right;
-    position: relative;
-    z-index: 900;
-}
-
-div.superform div.buttons input,
-div.superform div.buttons button {
-    background-color: #ee4843 !important;
-    padding-left: 4em;
-    padding-right: 4em;
-}
-
-div.superform div.buttons input:hover,
-div.superform div.buttons button:hover,
-div.superform div.buttons input:focus,
-div.superform div.buttons button:focus{
-    background-color: #ed1a37 !important;
-    padding-left: 4em;
-    padding-right: 4em;
-}
-
-div.superform div.buttons input.next:hover,
-div.superform div.buttons button.next:hover,
-div.superform div.buttons input.next:focus,
-div.superform div.buttons button.next:focus {
-    background-image: url('form/button/next.png');
-    background-position: 95% center;
-    background-repeat: no-repeat;
-}
-
-/* Checkbox sets */
-div.superform div.elements.checkboxes ul {
-    padding: 0;
-    margin: -1em 0 0;    
-    list-style: none;
-    overflow: hidden;
-}
-
-div.superform div.elements.checkboxes ul li {
-    border: none;
-    padding: 1em 0 0;
-    width: 33%;
-    float: left;   
-}
-
-div.superform div.elements.checkboxes input[type="checkbox"] {
-    margin-left: 0;
-}
-
-
-/* Tooltips */
-div.superform div.fields ol li div.tooltip {
-    z-index: 999;    
-    padding-top: 20px;    
-    background: url('form/tooltip/beak/cyan/n.png') no-repeat 20px 7px;
-    display: inline-block;
-}
-
-body.js div.superform div.fields ol li div.tooltip {
-    /* Javascript-enabled */
-    right: -251px;
-    top: 1em;
-    width: 250px;
-    padding-left: 13px;
-    display: none;
-    position: absolute;
-    background: url('form/tooltip/beak/cyan/w.png') no-repeat left 20px;
-    padding-top: 0;
-}
-
-div.superform div.fields ol li div.tooltip blockquote {
-    padding: 20px;
-    margin: 0;
-    background-color: #def1f1;
-    color: #7f8183;
-    border-radius: 7px;
-    box-shadow: 2px 3px 0 rgba(0,0,0,.2);
-    font-size: 13px;
-    position: relative;
-}
-
-div.superform div.fields ol li div.tooltip.visible {
-    display: block;
-}
-
-/* Other colors */
-div.superform.aqua div.fields ol li div.tooltip blockquote {
-    background-color: #35b8b8;
-    color: white;
-}
-
-div.superform.aqua div.fields ol li div.tooltip {    
-    background-image: url('form/tooltip/beak/aqua/n.png');    
-}
-
-body.js div.superform.aqua div.fields ol li div.tooltip {    
-    background-image: url('form/tooltip/beak/aqua/w.png');
-}
-
-div.superform.aqua input[type="text"],
-div.superform.aqua input[type="password"],
-div.superform.aqua textarea {
-    background-color: #dff2f3;
-    border-color: #1fb0b0;
-}
-
-div.superform.aqua input[type="submit"],
-div.superform.aqua input[type="reset"],
-div.superform.aqua button {
-    background-color: #1fb0b0;
-    color: white;
-}
-
-div.superform.red div.fields ol li div.tooltip blockquote {
-    background-color: #e13028;
-    color: white;
-}
-
-div.superform.red div.fields ol li div.tooltip {    
-    background-image: url('form/tooltip/beak/red/n.png');    
-}
-
-body.js div.superform.red div.fields ol li div.tooltip {    
-    background-image: url('form/tooltip/beak/red/w.png');
-}
-
-div.superform.red input[type="text"],
-div.superform.red input[type="password"],
-div.superform.red textarea {
-    background-color: #fdedec;
-    border-color: #ee4843;
-}
-
-div.superform.red input[type="submit"],
-div.superform.red input[type="reset"],
-div.superform.red button {
-    background-color: #ee4843;
-    color: white;
-} 
-
-div.superform.red div.guide h4,
-div.superform.red div.guide blockquote {    
-    background-color: #fdedec;    
-    color: #ee4843;
-}
-
-div.superform.green div.fields ol li div.tooltip blockquote {
-    background-color: #00b05b;
-    color: white;
-}
-
-div.superform.green div.fields ol li div.tooltip {    
-    background-image: url('form/tooltip/beak/green/n.png');    
-}
-
-body.js div.superform.green div.fields ol li div.tooltip {    
-    background-image: url('form/tooltip/beak/green/w.png');
-}
-
-div.superform.green input[type="text"],
-div.superform.green input[type="password"],
-div.superform.green textarea {
-    background-color: #e7f3e8;
-    border-color: #00b05b;
-}
-
-div.superform.green input[type="submit"],
-div.superform.green input[type="reset"],
-div.superform.green button {
-    background-color: #00b05b;
-    color: white;
-} 
-
-div.superform.green div.guide h4,
-div.superform.green div.guide blockquote {    
-    background-color: #e7f3e8;    
-    color: #00b05b;
-}
 
 
 /**
@@ -800,7 +519,7 @@ body.project-form div#main div.status {
 }
 
 body.project-form div#main .status #project-status,
-body.project-form div#main .status #information-status {
+body.project-form div#main .status #project-score{
     display: table-cell;
     width: 50%;     
     padding: 0 30px;
@@ -810,7 +529,7 @@ body.project-form div#main .status #project-status {
     padding-right: 50px;     
 }
 
-body.project-form div#main .status #information-status {
+body.project-form div#main .status #project-score {
     border-left: 1px dashed #bcbdbf;
     padding-left: 50px;
 }
@@ -845,29 +564,29 @@ body.project-form div#main .status #project-status ul li strong {
     
 }
 
-body.project-form div#main .status #information-status p {
+body.project-form div#main .status #project-score p {
     margin-top: 0;
     width: 80%;
     font-size: 12px;
 }
 
-body.project-form div#main .status #information-status .meter {
+body.project-form div#main .status #project-score .meter {
     height: 117px;
     width: 369px;    
     margin-top: -2em;
     position: relative;
 }
 
-body.project-form div#main .status #information-status .meter .done {
-    background: url('project/progressmeter.png') no-repeat left top;
+body.project-form div#main .status #project-score .meter .done {
+    background: url('project/scoremeter.png') no-repeat left top;
     position: absolute;
     left: 0;
     top: 0;
     bottom: 0;
 }
 
-body.project-form div#main .status #information-status .meter .left {
-    background: url('project/progressmeter.png') no-repeat right bottom;
+body.project-form div#main .status #project-score .meter .left {
+    background: url('project/scoremeter.png') no-repeat right bottom;
     position: absolute;
     right: 0;        
     top: 0;
@@ -923,8 +642,6 @@ body.project-form div#main #project-steps li.offtopic {
 body.project-form div#main #project-steps li.offtopic input {
     color: #b2b2b2;
 }
-
-
 
 body.project-form div.superform {
     border: solid #0a0a0a;
