Página pública de proyecto

--- a/view/css/goteo.css
+++ b/view/css/goteo.css
@@ -4,6 +4,7 @@
 */
 
 @import url('superform.css');
+@import url('project.css');
 
 * {
     font-family: Helvetica, Arial, Geneva, sans-serif;
@@ -21,6 +22,11 @@ html, body {
 }
 
 body, td, th, a, a:link, a:visited, a:active, a:hover, input, textarea, button {    
+    font-size: 13px;
+    color: #58595b;
+}
+
+input, textarea, button {
     font-size: 14px;
 }
 
@@ -371,6 +377,7 @@ div#footer {
     overflow: hidden;
     border-bottom: 25px solid white;
     padding-top: 35px;
+    clear: both;
 }
 
 div#footer hr {
@@ -476,6 +483,7 @@ div#main {
     max-width: 940px;
     margin: 40px auto;
     clear: both;
+    overflow: auto;
 }
 
 /**
@@ -506,144 +514,11 @@ body.user-profile div#sub-header h2 em {
     font-style: normal;
 }
 
-
-
 /**
- * Project form
+ * Widgets
  */
  
-body.project-form div#main div.status {
-    color: #bcbdbd;
-    padding-bottom: 30px;
-    border-bottom: 3px solid #cfd0d2; 
-}
-
-body.project-form div#main .status #project-status,
-body.project-form div#main .status #project-score{
-    display: table-cell;
-    width: 50%;     
-    padding: 0 30px;
-}
-
-body.project-form div#main .status #project-status {
-    padding-right: 50px;     
-}
-
-body.project-form div#main .status #project-score {
-    border-left: 1px dashed #bcbdbf;
-    padding-left: 50px;
-}
-
-body.project-form div#main .status h3 {
-    font-size: 26px;
-    font-weight: normal;
-    color: #bcbdbd;
-    text-transform: uppercase;
-    margin: 0 0 .6em;
-}
-
-body.project-form div#main .status #project-status ul {
-    padding: 0 0 0 16px;
-    margin: 0 0  0 6px;
-    list-style: none;
-    font-size: 16px;     
-    line-height: 1.5em;
-    border-left: 1px solid #bcbcbd;
-}
-
-body.project-form div#main .status #project-status ul li strong {
-    font-size: 22px;
-    color: #58595b;
-    font-weight: bold;
-    line-height: 1.6em;
-    padding-left: 20px;
-    display: block;
-    background: url('form/statusmarker.png') no-repeat left center;
-    margin-left: -22px;
-    text-shadow: 1px 1px 0 rgba(0,0,0,.25);
-    
-}
-
-body.project-form div#main .status #project-score p {
-    margin-top: 0;
-    width: 80%;
-    font-size: 12px;
-}
-
-body.project-form div#main .status #project-score .meter {
-    height: 117px;
-    width: 369px;    
-    margin-top: -2em;
-    position: relative;
-}
-
-body.project-form div#main .status #project-score .meter .done {
-    background: url('project/scoremeter.png') no-repeat left top;
-    position: absolute;
-    left: 0;
-    top: 0;
-    bottom: 0;
-}
-
-body.project-form div#main .status #project-score .meter .left {
-    background: url('project/scoremeter.png') no-repeat right bottom;
-    position: absolute;
-    right: 0;        
-    top: 0;
-    bottom: 0;
-}
-
-/* Form navigator (*steps*) */
-
-body.project-form div#main #project-steps {
-    padding: 30px 0;
-    text-align: center;
-}
-
-body.project-form div#main #project-steps h3 {
-    display: none;     
-}
-
-body.project-form div#main #project-steps ol {
-    margin: -10px 0 0;
-    padding: 0;
-    list-style: none;  
-    border-bottom: 2px solid #b2b2b2;
-    display: inline-block;
-    height: 3.5em;
-}
-
-body.project-form div#main #project-steps li {
-    display: inline-block;
-    padding: 0 1em 10px;
-    height: 100%;    
-    background: url('form/step-on.png') no-repeat bottom center;    
-}
-
-body.project-form div#main #project-steps li input {
-    font-size: 12px;    
-    font-weight: normal;
-    height: 100%;
-    margin: 0;    
-    padding: 0;
-    border: none;
-    background: none;
-    color: #20b2b1;
-    
-}
-
-body.project-form div#main #project-steps li.current {
-}
-
-body.project-form div#main #project-steps li.offtopic {
-    background-image: url('form/step-off.png');    
-}
-
-body.project-form div#main #project-steps li.offtopic input {
-    color: #b2b2b2;
-}
-
-body.project-form div.superform {
-    border: solid #0a0a0a;
-    border-width: 3px 0;     
-}
+ div.widget {
+     background-color: white;
+     padding: 20px;
+ }
