El símbolo de euro para el mínimo es ahora rojo.

--- a/view/css/project/widget/support.css
+++ b/view/css/project/widget/support.css
@@ -65,6 +65,10 @@ div.widget.project-support dl dd.minimum {
     display: inline-block;
 }
 
+div.widget.project-support dl dd.minimum {
+    background-image: url('../../euro/red/l.png');
+}
+
 div.widget.project-support dl dd.optimum strong,
 div.widget.project-support dl dd.minimum strong {
     font-size: 30px;
