"Esbozo" de maquetación de la previsualización

--- a/view/css/goteo.css
+++ b/view/css/goteo.css
@@ -510,7 +510,7 @@ div#main {
     margin: 40px auto;
     clear: both;
     overflow-y: auto;
-    overflow-x: visibe;
+    overflow-x: hidden;
 }
 
 /**
