--- a/view/css/project/edit.css
+++ b/view/css/project/edit.css
@@ -3,6 +3,7 @@
  */
  
 @import url('edit/steps.css');
+@import url('edit/costs.css');
 @import url('edit/preview.css');
 
 body.project-edit div#main div.status {
@@ -91,16 +92,3 @@ body.project-edit div.superform {
     border-width: 3px 0;     
 }
 
-/* Costs */
-body.project-edit div#main.costs div.superform li.element#costs > div.children > div.elements > ol > li > div.children > div.elements > ol > li > .title {
-    padding: .3em 0;
-    position: absolute;
-    left: 0;
-    top: 1em;
-}
-
-body.project-edit div#main.costs div.superform li.element#costs > div.children > div.elements > ol > li > div.children > div.elements > ol > li > .contents {
-    margin-left: 25%;
-    position: relative;
-    margin-top: 0;
-}
