--- a/view/css/header.css
+++ b/view/css/header.css
@@ -258,11 +258,15 @@ div#header div#menu > ul > li.search fieldset input[type="submit"]:hover {
 div#header div#menu > ul > li.community ,
 div#header div#menu > ul > li.login ,
 div#header div#menu > ul > li.dashboard {
-    height: 3.5em;    
+    height: 3.2em;    
     font-size: 13px;    
     position: relative;
-    background: transparent url('header/down-black.png') no-repeat right center;
+    margin-top: .5em;
 } 
+
+div#header div#menu > ul > li.dashboard {
+    background: transparent url('header/down-black.png') no-repeat right center;
+}
 
 div#header div#menu > ul > li.login fieldset > * {
     display: none;        
@@ -280,12 +284,16 @@ div#header div#menu > ul > li.login fieldset > legend {
 div#header div#menu > ul > li.community > a,
 div#header div#menu > ul > li.login > a,
 div#header div#menu > ul > li.dashboard > a {
-    padding: .5em 2.5em .5em 1.6em;
+    padding: .5em 1.6em;
     font-size: 13px;
-    height: 2.5em;
-    line-height: 2.5em;
+    height: 2.2em;
+    line-height: 2.2em;
     display: inline-block;    
     color: #59595c;
+}
+
+div#header div#menu > ul > li.dashboard > a {
+    padding-right: 2.5em;
 }
 
 div#header div#menu > h2,
@@ -296,8 +304,11 @@ div#header div#lang {
 div#header div#menu > ul > li.community:hover,
 div#header div#menu > ul > li.login:hover,
 div#header div#menu > ul > li.dashboard:hover {
-    background-color: #1db3b2;
-    background-image: url('header/down-white.png');    
+    background-color: #1db3b2;    
+}
+
+div#header div#menu > ul > li.dashboard:hover {
+    background-image: url('header/down-white.png');
 }
 
 div#header div#menu > ul > li.community:hover *,
