--- a/view/css/project/edit.css
+++ b/view/css/project/edit.css
@@ -3,6 +3,7 @@
  */
  
 @import url('edit/steps.css');
+@import url('edit/profile.css');
 @import url('edit/costs.css');
 @import url('edit/preview.css');
 
