--- a/view/css/header.css
+++ b/view/css/header.css
@@ -9,6 +9,16 @@ div#header strong {
     text-decoration: none;
 }
 
+div#header a {
+    color: #e9e3dc;
+    font-size: 12px;    
+}
+
+div#header a:hover {
+    color: #8ed9d8 !important;
+}
+
+
 /* Super-header */
 div#super-header {
     max-width: 940px;
@@ -57,11 +67,6 @@ div#header div#about ul li {
     font-size: 12px;
 }
 
-div#header div#about ul li > * {
-    color: #e9e3dc;
-    font-size: 12px;
-}
-
 div#header div#about ul li > *:hover {
     color: #8ed9d8;
 }
@@ -84,6 +89,9 @@ div#header div#highlights > ul > li > a {
     font-size: 12px;
     line-height: 2.2em;
     height: 2.2em;
+}
+
+div#header div#highlights > ul > li {
     color: white;
 }
 
@@ -110,10 +118,6 @@ div#header div#highlights > ul > li {
 div#header div#highlights > ul > li > a {
     margin-left: 1em;
     white-space: nowrap;
-}
-
-div#header div#highlights > ul > li > a:hover {
-    color: #8ed9d8;
 }
 
 div#header div#menu {
