--- a/view/css/header.css
+++ b/view/css/header.css
@@ -16,6 +16,7 @@ div#super-header {
     height: 2.2em;
     font-size: 12px;
     overflow: hidden;
+    padding: 0 1em;
 }
 
 div#super-header + * {
@@ -172,14 +173,14 @@ div#header div#menu > ul > li.create {
 
 div#header div#menu > ul > li.explore > a,
 div#header div#menu > ul > li.create > a {
-    padding: .4em 2em .4em .8em;
+    padding: .4em 1.8em .4em .8em;
     font-size: 12px;
     line-height: 1em;
     color: white;
     border-radius: 3px;
-    width: 8em;
     display: inline-block;
     margin: .6em .2em .6em 0;
+    max-width: 7.5em;
 }
 
 div#header div#menu > ul > li.explore > a {
@@ -223,6 +224,7 @@ div#header div#menu > ul > li.search fieldset input[type="text"] {
     padding: .2em;
     background-color: transparent;
     font-size: 14px;
+    width: 10em;
 }
 
 div#header div#menu > ul > li.search fieldset input[type="text"]:focus {
@@ -279,7 +281,7 @@ div#header div#menu > ul > li.login fieldset > legend {
 div#header div#menu > ul > li.community > a,
 div#header div#menu > ul > li.login > a,
 div#header div#menu > ul > li.dashboard > a {
-    padding: .5em 1.6em;
+    padding: .5em .8em;
     font-size: 13px;
     height: 2.2em;
     line-height: 2.2em;
@@ -288,7 +290,7 @@ div#header div#menu > ul > li.dashboard > a {
 }
 
 div#header div#menu > ul > li.dashboard > a {
-    padding-right: 2.5em;
+    padding-right: 1.9em;
 }
 
 div#header div#menu > h2,
