--- a/view/css/project/edit.css
+++ b/view/css/project/edit.css
@@ -4,6 +4,7 @@
  
 @import url('edit/steps.css');
 @import url('edit/profile.css');
+@import url('edit/overview.css');
 @import url('edit/costs.css');
 @import url('edit/preview.css');
 
