--- a/view/css/project/edit/costs.css
+++ b/view/css/project/edit/costs.css
@@ -3,9 +3,9 @@
  * Costs 
  */
  
- body.project-edit div#main.costs div.superform li.element.cost-new > .title {
-     display: none;
- }
+body.project-edit div#main.costs div.superform li.element.cost-new > .title {
+    display: none;
+}
 
 body.project-edit div#main.costs div.superform li.element.cost div.children li.element .title {
     padding: .3em 0;
@@ -23,6 +23,11 @@ body.project-edit div#main.costs div.superform li.element.cost div.children li.e
 body.project-edit div#main.costs div.superform li.element.cost div.children li.element.add,
 body.project-edit div#main.costs div.superform li.element.cost div.children li.element.remove {
     text-align: right;
+}
+
+body.project-edit div#main.costs div.superform li.element.cost div.children li.element.remove {
+    float: right;
+    margin-top: -4em;
 }
 
 body.project-edit div#main.costs div.superform li.element.cost div.children li.element.cost-type li > label {
@@ -65,6 +70,10 @@ body.project-edit div#main.costs div.superform li.element.cost div.children li.e
 
 body.project-edit div#main.costs div.superform li.element.cost div.children li.element.cost-type li.structure > label {
     background-image: url('../cost/structure.png');
+}
+
+body.project-edit div#main.costs div.superform li.element.cost div.children li.element.cost-type li.equip > label {
+    background-image: url('../cost/equipment.png');
 }
 
 body.project-edit div#main.costs div.superform li.element.cost div.children li.element.cost-amount {
@@ -112,20 +121,20 @@ body.project-edit div#main.costs div.superform li.element.cost div.children li.e
 }
 
 body.project-edit div#main.costs div.superform li.element.cost div.children li.element.cost-dates > div.children > div.elements > ol > li.cost-from,
-body.project-edit div#main.costs div.superform li.element.cost div.children li.element.cost-dates > div.children > div.elements > ol > li.cost-to {
+body.project-edit div#main.costs div.superform li.element.cost div.children li.element.cost-dates > div.children > div.elements > ol > li.cost-until {
     float: left;
     clear: none;
     margin-right: 1em;
 }
 
 body.project-edit div#main.costs div.superform li.element.cost div.children li.element.cost-dates > div.children > div.elements > ol > li.cost-from > div.contents,
-body.project-edit div#main.costs div.superform li.element.cost div.children li.element.cost-dates > div.children > div.elements > ol > li.cost-to > div.contents {
+body.project-edit div#main.costs div.superform li.element.cost div.children li.element.cost-dates > div.children > div.elements > ol > li.cost-until > div.contents {
     margin-top: 2em;
     margin-left: 0;
 }
 
 body.project-edit div#main.costs div.superform li.element.cost div.children li.element.cost-dates > div.children > div.elements > ol > li.cost-from input,
-body.project-edit div#main.costs div.superform li.element.cost div.children li.element.cost-dates > div.children > div.elements > ol > li.cost-to input {
+body.project-edit div#main.costs div.superform li.element.cost div.children li.element.cost-dates > div.children > div.elements > ol > li.cost-until input {
     width: 8em;
     max-width: 8em;
     min-width: 8em;
