--- a/view/css/project/edit/overview.css
+++ b/view/css/project/edit/overview.css
@@ -2,6 +2,9 @@ body.project-edit div#main.overview li.element.currently ul {
     margin: 2em 0;
     border: 1px dashed #B7C2C5;
     padding: 1em 0;
+    border-radius: 4px;
+    -moz-border-radius: 4px;
+    -webkit-border-radius: 4px;
 }
 
 body.project-edit div#main.overview li.element.currently li {
