Arreglado el z-index de la cabecera para que no se queden los menús al fondo

--- a/view/css/footer.css
+++ b/view/css/footer.css
@@ -11,6 +11,7 @@ div#footer {
     border-bottom: 25px solid white;
     padding-top: 35px;
     clear: both;
+    z-index: 0;
 }
 
 div#footer hr {
